--- a/views/info.njk
+++ b/views/info.njk
@@ -1,9 +1,12 @@
 {% extends 'partials/layout.njk' %}
 {% block content %}
-    <h1>Hello HTML!</h1>
-    {% for num in [0,1,2,3,4,5,6] %}
+    <h1>Here's some info or something</h1>
 
-        <h2>Hello {{ num }}</h2>
-
-    {% endfor %}
+    <ol>
+        <li>Something</li>
+        <li>Profiles</li>
+        <li>Games</li>
+        <li>Text</li>
+        <li>Bullshit</li>
+    </ol>
 {% endblock %}
