Add db connection, list and add views

--- a/views/partials/nav.njk
+++ b/views/partials/nav.njk
@@ -5,4 +5,5 @@
         <li><a href="/gallery">Gallery</a></li>
         <li><a href="/values">Our values</a></li>
         <li><a href="/info">Info</a></li>
+        <li><a href="/articles">Articles</a></li>
     </ul>
